--- a/TaskManager/Icm.TaskManager.Web/Icm.TaskManager.Web.csproj
+++ b/TaskManager/Icm.TaskManager.Web/Icm.TaskManager.Web.csproj
@@ -226,6 +226,7 @@
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="Scripts\app\task\task.datamodel.js" />
     <Content Include="Scripts\app\task\tasks.viewmodel.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -289,6 +290,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Hubs\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
