--- a/TaskManager/Icm.TaskManager.Web/packages.config
+++ b/TaskManager/Icm.TaskManager.Web/packages.config
@@ -32,9 +32,13 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
+  <package id="Ninject" version="3.0.1.10" targetFramework="net45" />
+  <package id="Ninject.Web" version="3.0.0.5" targetFramework="net45" />
+  <package id="Ninject.Web.Common" version="3.0.0.7" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
   <package id="Twitter.Bootstrap.MVC" version="2.1.3" targetFramework="net45" />
+  <package id="WebActivator" version="1.5.3" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0.4" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
