--- a/TaskManager/Icm.TaskManager.Web/packages.config
+++ b/TaskManager/Icm.TaskManager.Web/packages.config
@@ -32,6 +32,7 @@
   <package id="Ninject.Web" version="3.0.0.5" targetFramework="net45" />
   <package id="Ninject.Web.Common" version="3.0.0.7" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="RequireJS" version="2.1.9" targetFramework="net45" />
   <package id="Respond" version="1.3.0" targetFramework="net45" />
   <package id="Twitter.Bootstrap.MVC" version="2.1.4" targetFramework="net45" />
   <package id="WebActivator" version="1.5.3" targetFramework="net45" />
