Cleaning, introducing NodaTime (WIP)

--- a/TaskManager/Icm.TaskManager.Domain.Tests/Icm.TaskManager.Domain.Tests.csproj
+++ b/TaskManager/Icm.TaskManager.Domain.Tests/Icm.TaskManager.Domain.Tests.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NodaTime">
+      <HintPath>..\packages\NodaTime.1.2.0\lib\net35-Client\NodaTime.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -49,6 +52,9 @@
       <Project>{9b2297cb-2def-4b8e-b147-4bad6046900f}</Project>
       <Name>Icm.TaskManager.Domain</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
