--- a/TaskManager/Icm.TaskManager.Rest/packages.config
+++ b/TaskManager/Icm.TaskManager.Rest/packages.config
@@ -1,26 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoMapper" version="3.1.0" targetFramework="net45" />
-  <package id="EntityFramework" version="6.0.1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Cors" version="5.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Identity.Core" version="1.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Identity.EntityFramework" version="1.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Identity.Owin" version="1.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi" version="5.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Cors" version="5.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Owin" version="5.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.0.0" targetFramework="net45" />
-  <package id="Microsoft.Owin" version="2.0.2" targetFramework="net45" />
-  <package id="Microsoft.Owin.Security" version="2.0.2" targetFramework="net45" />
-  <package id="Microsoft.Owin.Security.Cookies" version="2.0.2" targetFramework="net45" />
-  <package id="Microsoft.Owin.Security.OAuth" version="2.0.2" targetFramework="net45" />
+  <package id="AutoMapper" version="3.1.1" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Cors" version="5.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.Owin" version="2.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi" version="5.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Owin" version="5.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.1.2" targetFramework="net45" />
+  <package id="Microsoft.Owin" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security.Cookies" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security.OAuth" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
-  <package id="Ninject" version="3.0.1.10" targetFramework="net45" />
-  <package id="Ninject.Web" version="3.0.0.5" targetFramework="net45" />
-  <package id="Ninject.Web.Common" version="3.0.0.7" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.2" targetFramework="net45" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
+  <package id="Ninject.Web" version="3.2.0.0" targetFramework="net45" />
+  <package id="Ninject.Web.Common" version="3.2.0.0" targetFramework="net45" />
+  <package id="Ninject.Web.Common.WebHost" version="3.2.0.0" targetFramework="net45" />
+  <package id="Ninject.Web.WebApi" version="3.2.0.0" targetFramework="net45" />
+  <package id="NodaTime" version="1.2.0" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
-  <package id="WebActivator" version="1.5.3" targetFramework="net45" />
+  <package id="WebActivatorEx" version="2.0.5" targetFramework="net45" />
 </packages>
