--- a/source/Icm.TaskManager.Infrastructure.Interfaces/Icm.TaskManager.Infrastructure.Interfaces.csproj
+++ b/source/Icm.TaskManager.Infrastructure.Interfaces/Icm.TaskManager.Infrastructure.Interfaces.csproj
@@ -45,10 +45,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Aggregate.cs" />
+    <Compile Include="Command.cs" />
+    <Compile Include="IApplyEvent.cs" />
     <Compile Include="ICurrentDateProvider.cs" />
     <Compile Include="IEventBus.cs" />
     <Compile Include="IEventHandler.cs" />
+    <Compile Include="IEventStore.cs" />
+    <Compile Include="IHandleCommand.cs" />
+    <Compile Include="IMessageDispatcher.cs" />
+    <Compile Include="InMemoryEventStore.cs" />
     <Compile Include="IRepository.cs" />
+    <Compile Include="ISubscribeTo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MemoryEventBus.cs" />
   </ItemGroup>
