--- a/source/Icm.TaskManager.Rest.Tests/Icm.TaskManager.Rest.Tests.csproj
+++ b/source/Icm.TaskManager.Rest.Tests/Icm.TaskManager.Rest.Tests.csproj
@@ -56,6 +56,10 @@
       <HintPath>..\packages\NodaTime.1.3.2\lib\net35-Client\NodaTime.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="NodaTime.Testing, Version=1.3.0.0, Culture=neutral, PublicKeyToken=4226afe0d9b296d1, processorArchitecture=MSIL">
+      <HintPath>..\packages\NodaTime.Testing.1.3.2\lib\net35-Client\NodaTime.Testing.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
@@ -126,9 +130,25 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Icm.TaskManager.Application\Icm.TaskManager.Application.csproj">
+      <Project>{369939ad-df75-4dca-9366-d8b3cbdc58b0}</Project>
+      <Name>Icm.TaskManager.Application</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Icm.TaskManager.Domain.Tests\Icm.TaskManager.Domain.Tests.csproj">
+      <Project>{A59D5CDA-39AE-4229-8A29-3D2ECD2828B9}</Project>
+      <Name>Icm.TaskManager.Domain.Tests</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Icm.TaskManager.Domain\Icm.TaskManager.Domain.csproj">
       <Project>{9b2297cb-2def-4b8e-b147-4bad6046900f}</Project>
       <Name>Icm.TaskManager.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Icm.TaskManager.Infrastructure.Interfaces\Icm.TaskManager.Infrastructure.Interfaces.csproj">
+      <Project>{018FD1F2-2F5C-47EA-83DF-D6E5F4248346}</Project>
+      <Name>Icm.TaskManager.Infrastructure.Interfaces</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Icm.TaskManager.Infrastructure\Icm.TaskManager.Infrastructure.csproj">
+      <Project>{88488A6A-8BAE-4F57-BB49-B5D1E35626EC}</Project>
+      <Name>Icm.TaskManager.Infrastructure</Name>
     </ProjectReference>
     <ProjectReference Include="..\Icm.TaskManager.Rest\Icm.TaskManager.Rest.csproj">
       <Project>{5d049c5b-7b58-44c0-b88d-d6ae5e5c6339}</Project>
