--- a/source/Icm.TaskManager.Rest.Tests/packages.config
+++ b/source/Icm.TaskManager.Rest.Tests/packages.config
@@ -11,4 +11,5 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.2" targetFramework="net45" />
   <package id="NodaTime" version="1.3.2" targetFramework="net461" />
+  <package id="NodaTime.Testing" version="1.3.2" targetFramework="net461" />
 </packages>
