--- a/source/Icm.TaskManager.CommandLine/Icm.TaskManager.CommandLine.csproj
+++ b/source/Icm.TaskManager.CommandLine/Icm.TaskManager.CommandLine.csproj
@@ -137,12 +137,17 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CreateTaskCommand.cs" />
+    <Compile Include="CommandRunner.cs" />
+    <Compile Include="Commands\BaseCommand.cs" />
+    <Compile Include="Commands\CreateTaskCommand.cs" />
+    <Compile Include="Commands\Tokenizer.cs" />
+    <Compile Include="Commands\UnknownCommand.cs" />
+    <Compile Include="Common.cs" />
     <Compile Include="EnumerableExtensions.cs" />
-    <Compile Include="ICommand.cs" />
+    <Compile Include="Commands\ICommand.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QuitCommand.cs" />
+    <Compile Include="Commands\QuitCommand.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
