--- a/source/Icm.TaskManager.CommandLine/Icm.TaskManager.CommandLine.csproj
+++ b/source/Icm.TaskManager.CommandLine/Icm.TaskManager.CommandLine.csproj
@@ -140,7 +140,7 @@
     <Compile Include="CommandRunner.cs" />
     <Compile Include="Commands\BaseCommand.cs" />
     <Compile Include="Commands\CreateTaskCommand.cs" />
-    <Compile Include="Commands\Tokenizer.cs" />
+    <Compile Include="Commands\CommandLineTokenizer.cs" />
     <Compile Include="Commands\UnknownCommand.cs" />
     <Compile Include="Common.cs" />
     <Compile Include="EnumerableExtensions.cs" />
@@ -148,6 +148,10 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Commands\QuitCommand.cs" />
+    <Compile Include="StateMachines\StateMachineExtensions.cs" />
+    <Compile Include="StateMachines\StateMachineResult.cs" />
+    <Compile Include="StateMachines\MealyItem.cs" />
+    <Compile Include="StateMachines\MealyItems.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
