--- a/source/Icm.TaskManager.Application/Icm.TaskManager.Application.csproj
+++ b/source/Icm.TaskManager.Application/Icm.TaskManager.Application.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TaskDto.cs" />
     <Compile Include="TaskExtensions.cs" />
+    <Compile Include="TimeDto.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
