--- a/source/Icm.TaskManager.Domain.Fs/Icm.ChoreManager.Domain.Fs.fsproj
+++ b/source/Icm.TaskManager.Domain.Fs/Icm.ChoreManager.Domain.Fs.fsproj
@@ -12,7 +12,7 @@
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <TargetFSharpCoreVersion>4.4.0.0</TargetFSharpCoreVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <Name>Icm.TaskManager.Domain.Fs</Name>
+    <Name>Icm.ChoreManager.Domain.Fs</Name>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
   </PropertyGroup>
