--- a/source/ClassLibrary1/Icm.ChoreManager.Tests.csproj
+++ b/source/ClassLibrary1/Icm.ChoreManager.Tests.csproj
@@ -17,9 +17,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Icm.TaskManager.Application\Icm.TaskManager.Application.csproj" />
-    <ProjectReference Include="..\Icm.TaskManager.CommandLine\Icm.TaskManager.CommandLine.csproj" />
-    <ProjectReference Include="..\Icm.TaskManager.Domain\Icm.TaskManager.Domain.csproj" />
+    <ProjectReference Include="..\Icm.TaskManager.Application\Icm.ChoreManager.Application.csproj" />
+    <ProjectReference Include="..\Icm.TaskManager.CommandLine\Icm.ChoreManager.CommandLine.csproj" />
+    <ProjectReference Include="..\Icm.TaskManager.Domain\Icm.ChoreManager.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
