--- a/source/Icm.TaskManager.Application/Icm.ChoreManager.Application.csproj
+++ b/source/Icm.TaskManager.Application/Icm.ChoreManager.Application.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Icm.TaskManager.Domain\Icm.TaskManager.Domain.csproj" />
+    <ProjectReference Include="..\Icm.TaskManager.Domain\Icm.ChoreManager.Domain.csproj" />
   </ItemGroup>
 
 </Project>
